# opp

./: .gitignore  Cargo.toml  README.md  SPEC.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  package-release.sh
src/: account.rs  broker.rs  cli.rs  client.rs  clock.rs  darwin.rs  environment.rs  lib.rs  main.rs  process.rs  protocol.rs  runtime.rs  status.rs
tests/: broker_integration.rs  install.sh
tests/fixtures/: fake_op.rs
